2003-03-23  Glen Nakamura <glen@imodulo.com>

	PR c/8224
	* fold-const.c (extract_muldiv_1): Don't pass through type conversions
	when signedness changes for division or modulus.

2003-03-24  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/sysv4.h (ASM_OUTPUT_ALIGNED_BSS): Remove unnecessary
	globalize_label.

2003-03-23  Roger Sayle  <roger@eyesopen.com>

	PR c/10178
	* stmt.c (expand_end_case_type): Check for overflow in range when
	determining whether to use a bit-test implementation.

2003-03-23  Richard Henderson  <rth@redhat.com>

	* cfgcleanup.c (try_optimize_cfg): Allow merging of tablejumps
	before flow2.
	* cfgrtl.c (try_redirect_by_replacing_jump): Similarly.

2003-03-23  Richard Henderson  <rth@redhat.com>

	PR opt/10116
	* ifcvt.c (find_if_block): Disallow tablejump insns outgoing
	from then_bb or else_bb after flow2.

2003-03-23  Zack Weinberg  <zack@codesourcery.com>

	* configure.in: Check whether it is necessary to link against
	libm to use ldexp.
	* configure: Regenerate.
	* Makefile.in: Add LDEXP_LIB substitution variable.

2003-03-23  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md: Fix comment typos.

2003-03-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (output_cbranch): Fix typo in comment.

2003-03-22  Richard Henderson <rth@redhat.com>

	* cfgcleanup.c (insns_match_p): Do not do EQUIV substitution
	after reload.

2003-03-22  DJ Delorie  <dj at redhat dot com>,
	Bruce Korb  <bkorb at gnu dot org>

	* fixinc/inclhack.def (solaris_mutex_init_1): New; Fix
	buggy Solaris 2.6 mutex/cond initializers.
	(solaris_mutex_init): Rename to solaris_mutex_init_2.
	* fixinc/fixincl.x: Regenerate.
	* fixinc/tests/base/pthread.h: Update.
	* fixinc/fixincl.c(initialize): be explicit about the default case
	and indicate verbose level when being very, very verbose.
	* fixinc/check.tpl(VERBOSE): provide a means for passing the value in

2003-03-22  Andreas Jaeger  <aj@suse.de>
