@@ -1,3 +1,8 @@
+2003-03-23  Arpad Beszedes <beszedes@cc.u-szeged.hu>
+
+	* builtins.c (expand_builtin_fputs): When optimizing for size,
+	don't transform fputs into fwrite.
+
 2003-03-23  Glen Nakamura <glen@imodulo.com>
 
 	PR c/8224
